tests/programs/valid/ValidAscii.java
public class ValidAscii {
    public static void main(String[] args) {
        System.out.println("Valid ASCII characters: Hello!");
    }
}
