tests/programs/invalid/array_method_call.java
public class array_method_call {
  public void m() {
    int[] x = new int[42];
    x.clone();
  }
}